force-app/main/default/objects/PBS_Closeout_proper_formatting__c/PBS_Closeout_proper_formatting__c.object-meta.xml
<CustomObject>
    <label>PBS Closeout</label>
    <nameField>
        <label>PBS Closeout proper formatting</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PBS Closeout proper formatting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>