force-app/main/default/objects/PBS_Closeout_proper_formatting__c/fields/Actual_Cumulative__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cumulative__c</fullName>
    <label>Actual Cumulative</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>