force-app/main/default/objects/PBS_Closeout_proper_formatting__c/fields/Projected__c.field-meta.xml
<CustomField>
    <fullName>Projected__c</fullName>
    <label>Projected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>