force-app/main/default/objects/PBS_Closeout_proper_formatting__c/fields/Projected_YTD__c.field-meta.xml
<CustomField>
    <fullName>Projected_YTD__c</fullName>
    <label>Projected YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>