force-app/main/default/objects/PBS_Closeout_proper_formatting__c/fields/Year_Month_Date__c.field-meta.xml
<CustomField>
    <fullName>Year_Month_Date__c</fullName>
    <label>Year Month Date</label>
    <type>Date</type>
</CustomField>