force-app/main/default/objects/PBS_Closeout_proper_formatting__c/fields/Year_Month_Name__c.field-meta.xml
<CustomField>
    <fullName>Year_Month_Name__c</fullName>
    <label>Year Month Name</label>
    <type>Date</type>
</CustomField>